test/compile-errors/record-field-visibility-warnings.crow
main void()
	()

r record
	+x nat

-s record
	~x nat

-t record
	-x nat
